--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,45 @@
-* {background-color: burlywood;}
+body {background-color: burlywood;}
+
+.flex-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+h4 {
+    background-color: rgb(126, 161, 189);
+}
+
+
+#navbar{
+    background-color: #526daf;
+}
+
+
+/* Register button hoover */
+.btn {
+    margin: 25px;
+    border: black;
+    background-color: darkred;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    display: inline-block;
+}
+
+/* On mouse-over */
+.btn:hover {
+    background: #526daf;
+    opacity: 2;
+    transition: 0.3s;
+}
+
+.success {
+    color: black;
+    font-weight: 800;
+}
+
+p.center {
+    background-color: darkred;
+    color: rgb(146, 32, 32);
+  }
